--- a/packages/pubspec.yaml
+++ b/packages/pubspec.yaml
@@ -9,6 +9,9 @@ workspace:
   - flutter
   - flutter_localizations
   - flutter_goldens
+  - flutter_web_plugins
+  - fuchsia_remote_debug_protocol
+  - integration_test
 
 dependencies:
   async: 2.13.0
@@ -37,7 +40,7 @@ dependencies:
   term_glyph: 1.2.2
   test_api: 0.7.4
   typed_data: 1.4.0
-  vector_math: 2.1.5
+  vector_math: 2.1.4
   vm_service: 15.0.0
   webdriver: 3.1.0
 
@@ -49,6 +52,7 @@ dev_dependencies:
   boolean_selector: 2.1.2
   cli_config: 0.2.0
   clock: 1.1.2
+  collection: 1.19.1
   convert: 3.1.2
   coverage: 1.13.0
   crypto: 3.0.6
