--- a/packages/pubspec.yaml
+++ b/packages/pubspec.yaml
@@ -4,16 +4,19 @@ environment:
   sdk: ^3.7.0-0
 
 workspace:
-  - flutter_driver
-  - flutter_test
   - flutter
-  - flutter_localizations
+  - flutter/test_private
+  - flutter/test_private/test
+  - flutter_driver
   - flutter_goldens
+  - flutter_localizations
+  - flutter_test
   - flutter_web_plugins
   - fuchsia_remote_debug_protocol
   - integration_test
 
 dependencies:
+  args: 2.7.0
   async: 2.13.0
   boolean_selector: 2.1.2
   characters: 1.4.0
@@ -32,6 +35,7 @@ dependencies:
   path: 1.9.1
   platform: 3.1.6
   process: 5.0.3
+  process_runner: 4.2.0
   source_span: 1.10.1
   stack_trace: 1.12.1
   stream_channel: 2.1.4
@@ -47,7 +51,6 @@ dependencies:
 dev_dependencies:
   _fe_analyzer_shared: 82.0.0
   analyzer: 7.4.4
-  args: 2.7.0
   cli_config: 0.2.0
   convert: 3.1.2
   coverage: 1.13.0
